--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "type": "git",
     "url": "https://github.com/mkdoc/mkcat.git"
   },
+  "bugs": {
+    "url": "https://github.com/mkdoc/mkcat/issues"
+  },
   "keywords": [
     "markdown",
     "commonmark",
