--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "transform"
   ],
   "dependencies": {
-    "commonmark": "~0.24.0",
-    "mkast": "~1.0.3",
+    "commonmark": "tmpfs/commonmark.js",
+    "mkast": "~1.1.1",
     "through3": "~1.1.5"
   },
   "devDependencies": {
