--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "scripts": {
     "lint": "jshint . && jscs .",
     "clean": "rm -rf coverage",
+    "docs": "npm run readme",
     "readme": "mdp --force -v",
     "test": "NODE_ENV=test mocha ${SPEC:-test/spec}",
     "cover": "NODE_ENV=test istanbul cover _mocha -- ${SPEC:-test/spec}",
